# avtomat_ranks

./: 662f489d-74fb-4681-b82d-4a04f6a47e78.ipynb  alg_main.ipynb  df1.csv  df2.csv  df3.csv  main.py  main_doc.ipynb  pyproject.toml
