[tool.poetry]
name = "avtomat-ranks"
version = "0.1.0"
description = ""
authors = ["anatoly <t.vlasov23@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
holidays = "^0.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
