[tool.poetry]
name = "avtomat-ranks"
version = "0.1.0"
description = ""
authors = ["anatoly <t.vlasov23@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
sklearn = "^0.0.post11"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.0"
matplotlib = "^3.8.2"
lightgbm = "^4.1.0"
catboost = "^1.2.2"
torch = "^2.1.1"
torchmetrics = "^1.2.0"
pytorch-lightning = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
